force-app/main/default/objects/Application_Fee__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Application Fees</relationshipLabel>
    <relationshipName>Application_Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>