force-app/main/default/objects/Application_Fee__c/fields/Associated_Equipment_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Associated_Equipment_Install_Date__c</fullName>
    <formula>Equipment__r.Installation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Equipment Install Date</label>
    <type>Date</type>
</CustomField>