force-app/main/default/objects/Application_Fee__c/fields/Calculating_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Calculating_Frequency__c</fullName>
    <formula>IF(ISPICKVAL(Escalation_Frequency__c ,&#39;ANNUAL&#39;),12, 
IF(ISPICKVAL(Escalation_Frequency__c ,&#39;QUARTERLY&#39;),3, 
IF(ISPICKVAL(Escalation_Frequency__c ,&#39;MONTHLY&#39;),1,
IF(ISPICKVAL(Escalation_Frequency__c ,&#39;SEMI-ANNUAL&#39;),6,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculating Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>