force-app/main/default/objects/Application_Fee__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>genesis__Application_Equipment__c</referenceTo>
    <relationshipLabel>Application Fees</relationshipLabel>
    <relationshipName>Application_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>