force-app/main/default/objects/Application_Fee__c/fields/Equipment_Total_Payment__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Total_Payment__c</fullName>
    <formula>(Equipment__r.genesis__Estimated_Selling_Price__c/Application__r.Total_Equipment_Cost__c)* Application__r.Pre_Upfront_Tax_Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Total Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>