force-app/main/default/objects/Application_Fee__c/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent %</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>