force-app/main/default/objects/Application_Fee__c/fields/Escalation_Value__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Value__c</fullName>
    <label>Escalation Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>