force-app/main/default/objects/Application_Fee__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <label>Fee</label>
    <referenceTo>clcommon__Fee_Definition__c</referenceTo>
    <relationshipLabel>Application Fees</relationshipLabel>
    <relationshipName>Application_Fees</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>