force-app/main/default/objects/Application_Fee__c/fields/Fee_Name__c.field-meta.xml
<CustomField>
    <fullName>Fee_Name__c</fullName>
    <label>Fee Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>