force-app/main/default/objects/Application_Fee__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <formula>TEXT(Fee__r.clcommon__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Type</label>
    <type>Text</type>
</CustomField>