force-app/main/default/objects/Application_Fee__c/fields/GetFeeName__c.field-meta.xml
<CustomField>
    <fullName>GetFeeName__c</fullName>
    <formula>Fee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GetFeeName</label>
    <type>Text</type>
</CustomField>