force-app/main/default/objects/Application_Fee__c/fields/Parent_Child__c.field-meta.xml
<CustomField>
    <fullName>Parent_Child__c</fullName>
    <label>Parent-Child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>