force-app/main/default/objects/Application_Fee__c/fields/Parent_id__c.field-meta.xml
<CustomField>
    <fullName>Parent_id__c</fullName>
    <label>Parent id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>