force-app/main/default/objects/Application_Fee__c/fields/Prorate_Per_Asset__c.field-meta.xml
<CustomField>
    <fullName>Prorate_Per_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prorate Per Asset</label>
    <type>Checkbox</type>
</CustomField>