force-app/main/default/objects/Application_Fee__c/fields/Service_Escalate__c.field-meta.xml
<CustomField>
    <fullName>Service_Escalate__c</fullName>
    <label>Service Escalate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>