force-app/main/default/objects/Application_Fee__c/fields/Service_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Service_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Escalation</label>
    <type>Checkbox</type>
</CustomField>