force-app/main/default/objects/Application_Fee__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>First Payment Due Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>