force-app/main/default/objects/Application_Fee__c/fields/Total_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Amount__c</fullName>
    <formula>Amount__c + VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>