force-app/main/default/objects/Application_Fee__c/validationRules/DueDate_not_Less_First_Payment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>DueDate_not_Less_First_Payment_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Start_Date__c  &lt;  Application__r.genesis__Expected_First_Payment_Date__c</errorConditionFormula>
    <errorMessage>Due Date Cannot be Less than First Payment Date AND Cannot be Greater than Maturity Date</errorMessage>
</ValidationRule>