force-app/main/default/objects/Application_Fee__c/validationRules/Escalation_ServiceOn_NOT_Less_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Escalation_ServiceOn_NOT_Less_than_zero</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Escalate_Service_On__c,&#39;Service Only&#39;),Amount__c &lt;= 0)</errorConditionFormula>
    <errorMessage>The Amount Cannot be Less Than or Equal to Zero</errorMessage>
</ValidationRule>