force-app/main/default/objects/Application_Fee__c/validationRules/Escalation_Value_NOT_Less_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Escalation_Value_NOT_Less_than_zero</fullName>
    <active>true</active>
    <errorConditionFormula>Escalation_Value__c &lt;= 0</errorConditionFormula>
    <errorMessage>Escalation Value Cannot be Less Than or Equal to Zero</errorMessage>
</ValidationRule>