force-app/main/default/objects/Application_Fee__c/validationRules/GeneratePricingAndSelectPricing.validationRule-meta.xml
<ValidationRule>
    <fullName>GeneratePricingAndSelectPricing</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNULL(Application__r.genesis__Term__c), Fee__r.Name = &#39;Service Fees&#39;)</errorConditionFormula>
    <errorMessage>Please Generate Pricing and Select the Pricing Before you Create Service Fee</errorMessage>
</ValidationRule>