force-app/main/default/objects/Application_Fee__c/validationRules/More_than_15_Percent_on_Escalation.validationRule-meta.xml
<ValidationRule>
    <fullName>More_than_15_Percent_on_Escalation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Escalation_Type__c, &#39;Percent %&#39;), Escalation_Value__c &gt; 15)</errorConditionFormula>
    <errorMessage>Escalation Value cannot be greater than 15%</errorMessage>
</ValidationRule>