force-app/main/default/objects/Application_Fee__c/validationRules/Number_of_Payment_not_greater_than_Term.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Payment_not_greater_than_Term</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Terms__c &gt; Application__r.genesis__Term__c</errorConditionFormula>
    <errorMessage>Number of Payments Cannot be Greater than Genesis Lease Term</errorMessage>
</ValidationRule>