force-app/main/default/objects/Application_Fee__c/validationRules/Service_Fee_Associated_Equipment_Require.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Fee_Associated_Equipment_Require</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(Fee__r.Name = &#39;Service Fees&#39;, ISBLANK(Equipment__c)) ,true,false)</errorConditionFormula>
    <errorMessage>Associated Equipment Has to be Selected</errorMessage>
</ValidationRule>