force-app/main/default/objects/Application_Fee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Fee__c</columns>
    <columns>Fee_Name__c</columns>
    <columns>Equipment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>